apps/kube/agones/mmorpg/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: mmorpg
    labels:
        app.kubernetes.io/part-of: mmorpg
        kbve.com/stack: agones
